# qmice-remap

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  josepuga.cmake  version.h.in
assets/: template.profile
doc/: LEEME.md  README.md  troubleshooting-EN.md  troubleshooting-ES.md  tutorial-create-profile-EN.md  tutorial-create-profile-ES.md
linuxdeploy-files/: AppRun  qmice-remap.desktop  qmice-remap.ini
profiles/: 0003-046d-c408-0110.profile  0003-046d-c408-0111.profile  0003-047d-1020-0111.profile
scripts/: create-profile.sh  make-appimage.sh  make-buttons-tags-header.sh  make-config-file.sh
src/: button_info.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mouse_info.cpp
src/include/: button_info.hpp  buttons_tags.hpp  ini.hpp  mainwindow.h  mouse_info.hpp  version.hpp
src/resources/: resources.qrc
